--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="conteiner-header">
+      <div class="container">
         <nav class="page-nav">
           <a class="logo" href="./index.html"
             >Web<span class="studio-color">Studio</span></a
@@ -58,13 +58,13 @@
     </header>
     <main>
       <section class="hero">
-        <div class="conteiner-hero">
+        <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button">Order Service</button>
         </div>
       </section>
       <section class="skills">
-        <div class="conteiner-skills">
+        <div class="container">
           <h2 class="visually-hidden">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
           </h2>
@@ -101,7 +101,7 @@
         </div>
       </section>
       <section class="person-team">
-        <div class="conteiner-person-team">
+        <div class="container">
           <h2 class="person-team-title">Our Team</h2>
           <ul class="person-team-list">
             <li class="person-team-item">
@@ -111,8 +111,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="person-title">Mark Guerrero</h3>
-              <p class="person-text">Product Designer</p>
+              <div class="person-container">
+                <h3 class="person-title">Mark Guerrero</h3>
+                <p class="person-text">Product Designer</p>
+              </div>
             </li>
             <li class="person-team-item">
               <img
@@ -121,8 +123,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="person-title">Tom Ford</h3>
-              <p class="person-text">Frontend Developer</p>
+              <div class="person-container">
+                <h3 class="person-title">Tom Ford</h3>
+                <p class="person-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="person-team-item">
               <img
@@ -131,8 +135,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="person-title">Camila Garcia</h3>
-              <p class="person-text">Marketing</p>
+              <div class="person-container">
+                <h3 class="person-title">Camila Garcia</h3>
+                <p class="person-text">Marketing</p>
+              </div>
             </li>
             <li class="person-team-item">
               <img
@@ -141,15 +147,17 @@
                 width="264"
                 height="260"
               />
-              <h3 class="person-title">Daniel Wilson</h3>
-              <p class="person-text">UI Designer</p>
+              <div class="person-container">
+                <h3 class="person-title">Daniel Wilson</h3>
+                <p class="person-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
       <!--Our portfolio-->
       <section class="possibility">
-        <div class="coteiner-possibility">
+        <div class="container">
           <h2 class="possibility-title">Our Portfolio</h2>
           <ul class="possibility-list">
             <li class="possibility-item">
@@ -159,8 +167,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="possibility-item-title">Banking App</h3>
-              <p class="possibility-item-text">App</p>
+              <div class="possibility-container">
+                <h3 class="possibility-item-title">Banking App</h3>
+                <p class="possibility-item-text">App</p>
+              </div>
             </li>
             <li class="possibility-item">
               <img
@@ -169,8 +179,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="possibility-item-title">Cashless Payment</h3>
-              <p class="possibility-item-text">Marketing</p>
+              <div class="possibility-container">
+                <h3 class="possibility-item-title">Cashless Payment</h3>
+                <p class="possibility-item-text">Marketing</p>
+              </div>
             </li>
             <li class="possibility-item">
               <img
@@ -179,8 +191,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="possibility-item-title">Meditation App</h3>
-              <p class="possibility-item-text">App</p>
+              <div class="possibility-container">
+                <h3 class="possibility-item-title">Meditation App</h3>
+                <p class="possibility-item-text">App</p>
+              </div>
             </li>
             <li class="possibility-item">
               <img
@@ -189,8 +203,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="possibility-item-title">Taxi Service</h3>
-              <p class="possibility-item-text">Marketing</p>
+              <div class="possibility-container">
+                <h3 class="possibility-item-title">Taxi Service</h3>
+                <p class="possibility-item-text">Marketing</p>
+              </div>
             </li>
             <li class="possibility-item">
               <img
@@ -199,8 +215,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="possibility-item-title">Screen Illustrations</h3>
-              <p class="possibility-item-text">Design</p>
+              <div class="possibility-container">
+                <h3 class="possibility-item-title">Screen Illustrations</h3>
+                <p class="possibility-item-text">Design</p>
+              </div>
             </li>
             <li class="possibility-item">
               <img
@@ -209,15 +227,17 @@
                 width="360"
                 height="300"
               />
-              <h3 class="possibility-item-title">Online Courses</h3>
-              <p class="possibility-item-text">Marketing</p>
+              <div class="possibility-container">
+                <h3 class="possibility-item-title">Online Courses</h3>
+                <p class="possibility-item-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="lower">
-      <div class="conteiner-lower">
+      <div class="container">
         <a class="lower-link" href="./index.html"
           >Web<span class="lower-studio-color">Studio</span></a
         >
