--- a/index.html
+++ b/index.html
@@ -21,41 +21,39 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header-container">
-        <div class="container">
-          <nav class="page-nav">
-            <a class="logo" href="./index.html"
-              >Web<span class="studio-color">Studio</span></a
-            >
-            <ul class="menu">
-              <li class="menu-item">
-                <a class="menu-link" href="./index.html"
-                  ><span class="menu-link-studio">Studio</span></a
-                >
-              </li>
-              <li class="menu-item">
-                <a class="menu-link" href="">Portfolio</a>
-              </li>
-              <li class="menu-item">
-                <a class="menu-link" href="">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-          <address class="contacts">
-            <ul class="contacts-list">
-              <li class="contacts-item">
-                <a class="contacts-link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="contacts-item">
-                <a class="contacts-link" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+      <div class="page-header-container" class="container">
+        <nav class="page-nav">
+          <a class="logo" href="./index.html"
+            >Web<span class="studio-color">Studio</span></a
+          >
+          <ul class="menu">
+            <li class="menu-item">
+              <a class="menu-link" href="./index.html"
+                ><span class="menu-link-studio">Studio</span></a
+              >
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
