--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header-container" class="container">
+      <div class="page-header-container">
         <nav class="page-nav">
           <a class="logo" href="./index.html"
             >Web<span class="studio-color">Studio</span></a
@@ -54,6 +54,7 @@
             </li>
           </ul>
         </address>
+        <div class="container"></div>
       </div>
     </header>
     <main>
